# To-Do-List

./: .env.example  .gitignore  README.md  ToDo.py  pyproject.toml
cli/: cli.py
config/: config.py
models/: models.py
repository/: repo.py
service/: service.py
